[package]
name = "iroha"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tokenization Library for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.33"
heck = "0.3.1"
quote = {version = "1.0.7", optional = true}
proc-macro2 = {version = "1.0.18", optional = true}

[lib]
proc-macro=true

[features]
default = ["to-token"]
to-token = ["quote", "proc-macro2"]
