[package]
name = "iroha"
version = "0.1.3"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tokenization Library for Rust"
repository = "https://github.com/dark-flames/Iroha"
include = [
    "src/**",
    "derive/**",
    "helpers/**",
    "tests/**",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.33"
heck = "0.3.1"
quote = {version = "1.0.7", optional = true}
proc-macro2 = {version = "1.0.18", optional = true}
derive = { package = "iroha-codegen", version = "0.1.0", path = "derive" }
helpers = { package = "iroha-helpers", version = "0.1.0", path = "helpers" }


[features]
default = ["to-token"]
to-token = ["quote", "proc-macro2"]

[lib]

[workspace]
members = [
    "helpers",
    "derive"
]