[package]
name = "quote-it"
version = "1.0.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tokenization Library for Rust"
repository = "https://github.com/dark-flames/Iroha"
include = [
    "src/**",
    "derive/**",
    "helpers/**",
    "tests/**",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.75"
heck = "0.5.0"
quote = { version = "1.0.36", optional = true }
proc-macro2 = {version = "1.0.86", optional = true}
derive = { package = "quote-it-codegen", version = "1.0.0", path = "derive" }
helpers = { package = "quote-it-helpers", version = "1.0.0", path = "helpers" }


[features]
default = ["to-token"]
to-token = ["quote", "proc-macro2"]

[lib]

[workspace]
members = [
    "helpers",
    "derive"
]