[package]
name = "iroha-codegen"
version = "0.1.1"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Internal codegen for Iroha"
repository = "https://github.com/dark-flames/Iroha"
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.33"
heck = "0.3.1"
quote = "1.0.7"
proc-macro2 = "1.0.18"
helpers = { package = "iroha-helpers", version = "0.1.0", path = "../helpers" }

[lib]
proc-macro=true
