[package]
name = "quote-it-codegen"
version = "1.0.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Internal codegen for quote-it"
repository = "https://github.com/dark-flames/Iroha"
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.33"
heck = "0.3.1"
quote = "1.0.7"
proc-macro2 = "1.0.18"
helpers = { package = "quote-it-helpers", version = "1.0.0", path = "../helpers" }

[lib]
proc-macro=true
