[package]
name = "quote-data-codegen"
version = "1.0.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Internal codegen for quote-it"
repository = "https://github.com/dark-flames/Iroha"
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.75"
heck = "0.5.0"
quote = "1.0.36"
proc-macro2 = "1.0.86"
helpers = { package = "quote-data-helpers", version = "1.0.0", path = "../helpers" }

[lib]
proc-macro=true
