[package]
name = "iroha-helpers"
version = "0.1.1"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Internal functions, struct for Iroha"
repository = "https://github.com/dark-flames/Iroha"
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.33"
quote = "1.0.7"
proc-macro2 = "1.0.18"
thiserror = "1.0.23"

[lib]
